--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,8 @@
-#Fri Jan 12 13:48:31 EST 2018
+#Tue Feb 05 18:28:11 EST 2019
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
+android.enableJetifier=true
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-4.4-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-5.1.1-all.zip
+android.useAndroidX=true
